--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,11 @@
 .site-footer
 {
-  padding:45px 0 20px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
   font-size:15px;
   line-height:24px;
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
